<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="2"
    tools:context="com.example.tlozano.androidlabs2.ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButton1"
        android:text="@string/radio"
        android:layout_columnWeight="1"
        android:gravity="fill"/>


    <CheckBox
        android:id="@+id/checkBox1"
        android:text="@string/checkbox"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <Switch
        android:id="@+id/switch1"
        android:text="@string/whatThisDo"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <ImageButton
        android:id="@+id/imagebutton1"
        android:layout_width="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        />

</GridLayout>
